<resources>
    <string name="app_name">Bus Tracker Driver</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="message_location_permission">We need to access to your location</string>
    <string name="title_location_not_found">LOCATION NOT FOUND</string>
    <string name="message_location_not_found">Please turn on Location Services and set it to High Accuracy</string>
    <string name="take_to_settings">Take me there</string>
    <string name="double_press_to_exit">Press again to exit</string>
    <string name="start_service">Start Service</string>
    <string name="tbs">Location 2</string>
    <string name="university">Location 1</string>
    <string name="college">Location 3</string>
    <string name="destination">Destination</string>
</resources>
